Criando as paginas de informações,ingresso e ingresso pago

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <ul class="menu__lista">
                 <li class="menu__item"><a href="experiencia.html" class="menu__link">A experiência</a></li>
                 <li class="menu__item"><a href="setores.html" class="menu__link">Mapa de Setores</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Informações</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Ingresso</a></li>
+                <li class="menu__item"><a href="informacoes.html" class="menu__link">Informações</a></li>
+                <li class="menu__item"><a href="ingresso.html" class="menu__link">Ingresso</a></li>
             </ul>
         </nav>
 
@@ -52,7 +52,7 @@
             </div>
         </section>
 
-        <section class="lineup">
+        <section class="lineup" id="line-up">
             <h2 class="lineup__titulo">/Line-Up/</h2>
             <div class="lineup__container">
                 <span class="lineup__linha"></span>
