--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="menu__item"><a href="experiencia.html" class="menu__link">A experiência</a></li>
                 <li class="menu__item"><a href="setores.html" class="menu__link">Mapa de Setores</a></li>
                 <li class="menu__item"><a href="informacoes.html" class="menu__link">Informações</a></li>
-                <li class="menu__item"><a href="ingresso.html" class="menu__link">Ingresso</a></li>
+                <li class="menu__item"><a href="ingresso.html" class="menu__link" data-ingresso="">Ingresso</a></li>
             </ul>
         </nav>
 
@@ -37,7 +37,7 @@
                     <li class="menu__item"><a href="experiencia.html" class="menu__link ">A experiência</a></li>
                     <li class="menu__item"><a href="setores.html" class="menu__link menu__link--borda">Mapa de Setores</a></li>
                     <li class="menu__item"><a href="informacoes.html" class="menu__link menu__link--borda">Informações</a></li>
-                    <li class="menu__item"><a href="ingresso.html" class="menu__link menu__link--borda">Ingresso</a></li>
+                    <li class="menu__item"><a href="ingresso.html" class="menu__link menu__link--borda" data-ingresso="">Ingresso</a></li>
                 </ul>
             </div>
         </div>
@@ -147,5 +147,6 @@
     </footer>
     
     <script src="assets/js/menu.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
