--- a/setores.html
+++ b/setores.html
@@ -23,11 +23,24 @@
                 <li class="menu__item"><a href="experiencia.html" class="menu__link">A experiência</a></li>
                 <li class="menu__item"><a href="setores.html" class="menu__link">Mapa de Setores</a></li>
                 <li class="menu__item"><a href="informacoes.html" class="menu__link">Informações</a></li>
-                <li class="menu__item"><a href="ingresso.html" class="menu__link">Ingresso</a></li>
+                <li class="menu__item"><a href="ingresso.html" class="menu__link" data-ingresso="">Ingresso</a></li>
             </ul>
         </nav>
 
-        <img class="menu__icone" src="assets/img/menu-icone.svg" alt="">
+        <div class="menu__mobile">
+            <button class="btc__menu" id="btc__menu">
+                <img class="menu__icone" src="assets/img/menu-icone.svg" alt="icone do menu">
+            </button>
+           <div class="menu__container--mobile" id="menu__container">
+                <ul class="menu__lista--mobile">
+                    <li class="menu__item"><a href="experiencia.html" class="menu__link ">A experiência</a></li>
+                    <li class="menu__item"><a href="setores.html" class="menu__link menu__link--borda">Mapa de Setores</a></li>
+                    <li class="menu__item"><a href="informacoes.html" class="menu__link menu__link--borda">Informações</a></li>
+                    <li class="menu__item"><a href="ingresso.html" class="menu__link menu__link--borda" data-ingresso="">Ingresso</a></li>
+                </ul>
+            </div>
+        </div>
+
     </header>
 
     <main>
@@ -127,5 +140,7 @@
         <p class="rodape__copy"">Desenvolvido por Alura. Projeto fictício sem fins comerciais.</p>
     </footer>
 
+    <script src="assets/js/menu.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
